--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       href="./images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="./scss/style.css" />
-
+    <script src="https://kit.fontawesome.com/3a2c5a30e4.js" crossorigin="anonymous"></script>
     <title>Frontend Mentor | Room homepage</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -43,7 +43,7 @@
       <div class="small">
         <div class="content">
           <p><span class="heading">Discover innovative ways to decorate</span>We provide unmatched quality, comfort, and style for property owners across the country. Our experts combine form and function in bringing your vision to life. Create a room in your own style with our collection and make your property a reflection of you and what you love.</p>
-          <button>Shop now</button>
+          <button>Shop now <svg width="40" height="12" xmlns="http://www.w3.org/2000/svg"><path d="M34.05 0l5.481 5.527h.008v.008L40 6l-.461.465v.063l-.062-.001L34.049 12l-.662-.668 4.765-4.805H0v-1h38.206l-4.82-4.86L34.05 0z" fill="#000" fill-rule="nonzero"/></svg></button>
         </div>
         <div class="opitions"></div>
       </div>
@@ -51,7 +51,7 @@
 
     <div class="lower">
       <div class="grid-container-3">
-        <div></div>
+        <div><img src="./images/desktop-image-hero-2.jpg" alt=""></div>
         <div class="content">
           <p><span class="heading">About our furniture</span>Our multifunctional collection
             blends design and function to suit your individual taste. Make each room
@@ -60,26 +60,26 @@
             contemporary styles or anything in between. Product specialists are
             available to help you create your dream space. </p>
         </div>
-        <div></div>
+        <div><img src="./images/desktop-image-hero-3.jpg" alt=""></div>
       </div>
     </div>
-
-       We are available all across the globe With stores
-    all over the world, it's easy for you to find furniture for your home or
-    place of business. Locally, we’re in most major cities throughout the
-    country. Find the branch nearest you using our store locator. Any questions?
-    Don't hesitate to contact us today. Shop now Manufactured with the best
-    materials Our modern furniture store provide a high level of quality. Our
-    company has invested in advanced technology to ensure that every product is
-    made as perfect and as consistent as possible. With three decades of
-    experience in this industry, we understand what customers want for their
-    home and office. Shop now   
-
+    <div style="display: none;">
+      We are available all across the globe With stores
+   all over the world, it's easy for you to find furniture for your home or
+   place of business. Locally, we’re in most major cities throughout the
+   country. Find the branch nearest you using our store locator. Any questions?
+   Don't hesitate to contact us today. Shop now Manufactured with the best
+   materials Our modern furniture store provide a high level of quality. Our
+   company has invested in advanced technology to ensure that every product is
+   made as perfect and as consistent as possible. With three decades of
+   experience in this industry, we understand what customers want for their
+   home and office. Shop now   
+</div>
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >. Coded by <a href="#">Omar Mahdy</a>.
     </div>
   </body>
 </html>
