completing the style of the initial page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,16 @@
       href="./images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="./scss/style.css" />
-    <script src="https://kit.fontawesome.com/3a2c5a30e4.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/3a2c5a30e4.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Frontend Mentor | Room homepage</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -42,39 +51,63 @@
 
       <div class="small">
         <div class="content">
-          <p><span class="heading">Discover innovative ways to decorate</span>We provide unmatched quality, comfort, and style for property owners across the country. Our experts combine form and function in bringing your vision to life. Create a room in your own style with our collection and make your property a reflection of you and what you love.</p>
-          <button>Shop now <svg width="40" height="12" xmlns="http://www.w3.org/2000/svg"><path d="M34.05 0l5.481 5.527h.008v.008L40 6l-.461.465v.063l-.062-.001L34.049 12l-.662-.668 4.765-4.805H0v-1h38.206l-4.82-4.86L34.05 0z" fill="#000" fill-rule="nonzero"/></svg></button>
+          <p>
+            <span class="heading">Discover innovative ways to decorate</span>We
+            provide unmatched quality, comfort, and style for property owners
+            across the country. Our experts combine form and function in
+            bringing your vision to life. Create a room in your own style with
+            our collection and make your property a reflection of you and what
+            you love.
+          </p>
+          <button>
+            Shop now
+            <svg width="40" height="12" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M34.05 0l5.481 5.527h.008v.008L40 6l-.461.465v.063l-.062-.001L34.049 12l-.662-.668 4.765-4.805H0v-1h38.206l-4.82-4.86L34.05 0z"
+                fill="#000"
+                fill-rule="nonzero"
+              />
+            </svg>
+          </button>
         </div>
-        <div class="opitions"></div>
+        <div class="opitions">
+          <!-- <svg width="25" height="24" xmlns="http://www.w3.org/2000/svg"><path d="M13 0L1 12l12 12" stroke="#FFF" fill="none" fill-rule="evenodd"/></svg> -->
+          <!-- <svg width="25" height="24" xmlns="http://www.w3.org/2000/svg"><path d="M1 0l12 12L1 24" stroke="#FFF" fill="none" fill-rule="evenodd"/></svg> -->
+          <img src="./images/icon-angle-left.svg" alt="">
+          <img src="./images/icon-angle-right.svg" alt="">
+        </div>
       </div>
     </div>
 
     <div class="lower">
       <div class="grid-container-3">
-        <div><img src="./images/desktop-image-hero-2.jpg" alt=""></div>
+        <div><img src="./images/desktop-image-hero-2.jpg" alt="" /></div>
         <div class="content">
-          <p><span class="heading">About our furniture</span>Our multifunctional collection
-            blends design and function to suit your individual taste. Make each room
-            unique, or pick a cohesive theme that best express your interests and what
-            inspires you. Find the furniture pieces you need, from traditional to
-            contemporary styles or anything in between. Product specialists are
-            available to help you create your dream space. </p>
+          <p>
+            <span class="heading">About our furniture</span>Our multifunctional
+            collection blends design and function to suit your individual taste.
+            Make each room unique, or pick a cohesive theme that best express
+            your interests and what inspires you. Find the furniture pieces you
+            need, from traditional to contemporary styles or anything in
+            between. Product specialists are available to help you create your
+            dream space.
+          </p>
         </div>
-        <div><img src="./images/desktop-image-hero-3.jpg" alt=""></div>
+        <div><img src="./images/desktop-image-hero-3.jpg" alt="" /></div>
       </div>
     </div>
-    <div style="display: none;">
-      We are available all across the globe With stores
-   all over the world, it's easy for you to find furniture for your home or
-   place of business. Locally, we’re in most major cities throughout the
-   country. Find the branch nearest you using our store locator. Any questions?
-   Don't hesitate to contact us today. Shop now Manufactured with the best
-   materials Our modern furniture store provide a high level of quality. Our
-   company has invested in advanced technology to ensure that every product is
-   made as perfect and as consistent as possible. With three decades of
-   experience in this industry, we understand what customers want for their
-   home and office. Shop now   
-</div>
+    <div style="display: none">
+      We are available all across the globe With stores all over the world, it's
+      easy for you to find furniture for your home or place of business.
+      Locally, we’re in most major cities throughout the country. Find the
+      branch nearest you using our store locator. Any questions? Don't hesitate
+      to contact us today. Shop now Manufactured with the best materials Our
+      modern furniture store provide a high level of quality. Our company has
+      invested in advanced technology to ensure that every product is made as
+      perfect and as consistent as possible. With three decades of experience in
+      this industry, we understand what customers want for their home and
+      office. Shop now
+    </div>
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
