--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
         <div class="opitions">
           <!-- <svg width="25" height="24" xmlns="http://www.w3.org/2000/svg"><path d="M13 0L1 12l12 12" stroke="#FFF" fill="none" fill-rule="evenodd"/></svg> -->
           <!-- <svg width="25" height="24" xmlns="http://www.w3.org/2000/svg"><path d="M1 0l12 12L1 24" stroke="#FFF" fill="none" fill-rule="evenodd"/></svg> -->
-          <img src="./images/icon-angle-left.svg" alt="">
-          <img src="./images/icon-angle-right.svg" alt="">
+          <img class="leftarrow" src="./images/icon-angle-left.svg" alt="">
+          <img class="rightarrow"  src="./images/icon-angle-right.svg" alt="">
         </div>
       </div>
     </div>
@@ -108,11 +108,7 @@
       this industry, we understand what customers want for their home and
       office. Shop now
     </div>
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Omar Mahdy</a>.
-    </div>
+   
+    <script src="./js/main.js"></script>
   </body>
 </html>
