finished navigations function
still need to add the changing content like the p and spans around the images

--- a/index.html
+++ b/index.html
@@ -71,17 +71,15 @@
           </button>
         </div>
         <div class="opitions">
-          <!-- <svg width="25" height="24" xmlns="http://www.w3.org/2000/svg"><path d="M13 0L1 12l12 12" stroke="#FFF" fill="none" fill-rule="evenodd"/></svg> -->
-          <!-- <svg width="25" height="24" xmlns="http://www.w3.org/2000/svg"><path d="M1 0l12 12L1 24" stroke="#FFF" fill="none" fill-rule="evenodd"/></svg> -->
-          <img class="leftarrow" src="./images/icon-angle-left.svg" alt="">
-          <img class="rightarrow"  src="./images/icon-angle-right.svg" alt="">
+          <img class="leftarrow arrow" src="./images/icon-angle-left.svg" alt="">
+          <img class="rightarrow arrow"  src="./images/icon-angle-right.svg" alt="">
         </div>
       </div>
     </div>
 
     <div class="lower">
       <div class="grid-container-3">
-        <div><img src="./images/desktop-image-hero-2.jpg" alt="" /></div>
+        <div><img src="./images/image-about-dark.jpg" alt="" /></div>
         <div class="content">
           <p>
             <span class="heading">About our furniture</span>Our multifunctional
@@ -93,7 +91,7 @@
             dream space.
           </p>
         </div>
-        <div><img src="./images/desktop-image-hero-3.jpg" alt="" /></div>
+        <div><img src="./images/image-about-light.jpg" alt="" /></div>
       </div>
     </div>
     <div style="display: none">
