changing the text is working now

--- a/index.html
+++ b/index.html
@@ -71,8 +71,16 @@
           </button>
         </div>
         <div class="opitions">
-          <img class="leftarrow arrow" src="./images/icon-angle-left.svg" alt="">
-          <img class="rightarrow arrow"  src="./images/icon-angle-right.svg" alt="">
+          <img
+            class="leftarrow arrow"
+            src="./images/icon-angle-left.svg"
+            alt=""
+          />
+          <img
+            class="rightarrow arrow"
+            src="./images/icon-angle-right.svg"
+            alt=""
+          />
         </div>
       </div>
     </div>
@@ -81,7 +89,7 @@
       <div class="grid-container-3">
         <div><img src="./images/image-about-dark.jpg" alt="" /></div>
         <div class="content">
-          <p>
+          <p class="one replaceable-paragraph">
             <span class="heading">About our furniture</span>Our multifunctional
             collection blends design and function to suit your individual taste.
             Make each room unique, or pick a cohesive theme that best express
@@ -91,22 +99,72 @@
             dream space.
           </p>
         </div>
+
         <div><img src="./images/image-about-light.jpg" alt="" /></div>
       </div>
     </div>
     <div style="display: none">
-      We are available all across the globe With stores all over the world, it's
-      easy for you to find furniture for your home or place of business.
-      Locally, we’re in most major cities throughout the country. Find the
-      branch nearest you using our store locator. Any questions? Don't hesitate
-      to contact us today. Shop now Manufactured with the best materials Our
-      modern furniture store provide a high level of quality. Our company has
-      invested in advanced technology to ensure that every product is made as
-      perfect and as consistent as possible. With three decades of experience in
-      this industry, we understand what customers want for their home and
-      office. Shop now
+      <div class="content-one">
+        <p class="one replaceable-paragraph">
+          <span class="heading">About our furniture</span>Our multifunctional
+          collection blends design and function to suit your individual taste.
+          Make each room unique, or pick a cohesive theme that best express your
+          interests and what inspires you. Find the furniture pieces you need,
+          from traditional to contemporary styles or anything in between.
+          Product specialists are available to help you create your dream space.
+        </p>
+        <button>
+          Shop now
+          <svg width="40" height="12" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M34.05 0l5.481 5.527h.008v.008L40 6l-.461.465v.063l-.062-.001L34.049 12l-.662-.668 4.765-4.805H0v-1h38.206l-4.82-4.86L34.05 0z"
+              fill="#000"
+              fill-rule="nonzero"
+            />
+          </svg>
+        </button>
+      </div>
+      <div class="content-three">
+        <p class="three replaceable-paragraph">
+          <span class="heading"> Manufactured with the best materials</span> Our
+          modern furniture store provide a high level of quality. Our company
+          has invested in advanced technology to ensure that every product is
+          made as perfect and as consistent as possible. With three decades of
+          experience in this industry, we understand what customers want for
+          their home and office.
+        </p>
+        <button>
+          Shop now
+          <svg width="40" height="12" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M34.05 0l5.481 5.527h.008v.008L40 6l-.461.465v.063l-.062-.001L34.049 12l-.662-.668 4.765-4.805H0v-1h38.206l-4.82-4.86L34.05 0z"
+              fill="#000"
+              fill-rule="nonzero"
+            />
+          </svg>
+        </button>
+      </div>
+      <div class="content-two">
+        <p class="two replaceable-paragraph">
+          <span class="heading">We are available all across the globe</span>
+          With stores all over the world, it's easy for you to find furniture
+          for your home or place of business. Locally, we’re in most major
+          cities throughout the country. Find the branch nearest you using our
+          store locator. Any questions? Don't hesitate to contact us today.
+        </p>
+        <button>
+          Shop now
+          <svg width="40" height="12" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M34.05 0l5.481 5.527h.008v.008L40 6l-.461.465v.063l-.062-.001L34.049 12l-.662-.668 4.765-4.805H0v-1h38.206l-4.82-4.86L34.05 0z"
+              fill="#000"
+              fill-rule="nonzero"
+            />
+          </svg>
+        </button>
+      </div>
     </div>
-   
+
     <script src="./js/main.js"></script>
   </body>
 </html>
