--- a/index.html
+++ b/index.html
@@ -36,73 +36,76 @@
     </style>
   </head>
   <body>
-    <div class="upper">
-      <div class="big">
-        <nav>
-          <div class="currentTitle">Room</div>
-          <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Shop</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
-          </ul>
-        </nav>
+    <div class="container">
+      <div class="upper">
+        <div class="big">
+          <nav>
+            <div class="currentTitle">Room</div>
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Shop</a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </nav>
+        </div>
+
+        <div class="small">
+          <div class="content">
+            <p>
+              <span class="heading">Discover innovative ways to decorate</span
+              >We provide unmatched quality, comfort, and style for property
+              owners across the country. Our experts combine form and function
+              in bringing your vision to life. Create a room in your own style
+              with our collection and make your property a reflection of you and
+              what you love.
+            </p>
+            <button>
+              Shop now
+              <svg width="40" height="12" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M34.05 0l5.481 5.527h.008v.008L40 6l-.461.465v.063l-.062-.001L34.049 12l-.662-.668 4.765-4.805H0v-1h38.206l-4.82-4.86L34.05 0z"
+                  fill="#000"
+                  fill-rule="nonzero"
+                />
+              </svg>
+            </button>
+          </div>
+          <div class="opitions">
+            <img
+              class="leftarrow arrow"
+              src="./images/icon-angle-left.svg"
+              alt=""
+            />
+            <img
+              class="rightarrow arrow"
+              src="./images/icon-angle-right.svg"
+              alt=""
+            />
+          </div>
+        </div>
       </div>
 
-      <div class="small">
-        <div class="content">
-          <p>
-            <span class="heading">Discover innovative ways to decorate</span>We
-            provide unmatched quality, comfort, and style for property owners
-            across the country. Our experts combine form and function in
-            bringing your vision to life. Create a room in your own style with
-            our collection and make your property a reflection of you and what
-            you love.
-          </p>
-          <button>
-            Shop now
-            <svg width="40" height="12" xmlns="http://www.w3.org/2000/svg">
-              <path
-                d="M34.05 0l5.481 5.527h.008v.008L40 6l-.461.465v.063l-.062-.001L34.049 12l-.662-.668 4.765-4.805H0v-1h38.206l-4.82-4.86L34.05 0z"
-                fill="#000"
-                fill-rule="nonzero"
-              />
-            </svg>
-          </button>
-        </div>
-        <div class="opitions">
-          <img
-            class="leftarrow arrow"
-            src="./images/icon-angle-left.svg"
-            alt=""
-          />
-          <img
-            class="rightarrow arrow"
-            src="./images/icon-angle-right.svg"
-            alt=""
-          />
+      <div class="lower">
+        <div class="grid-container-3">
+          <div><img src="./images/image-about-dark.jpg" alt="" /></div>
+          <div class="content">
+            <p class="one replaceable-paragraph">
+              <span class="heading">About our furniture</span>Our
+              multifunctional collection blends design and function to suit your
+              individual taste. Make each room unique, or pick a cohesive theme
+              that best express your interests and what inspires you. Find the
+              furniture pieces you need, from traditional to contemporary styles
+              or anything in between. Product specialists are available to help
+              you create your dream space.
+            </p>
+          </div>
+
+          <div><img src="./images/image-about-light.jpg" alt="" /></div>
         </div>
       </div>
     </div>
 
-    <div class="lower">
-      <div class="grid-container-3">
-        <div><img src="./images/image-about-dark.jpg" alt="" /></div>
-        <div class="content">
-          <p class="one replaceable-paragraph">
-            <span class="heading">About our furniture</span>Our multifunctional
-            collection blends design and function to suit your individual taste.
-            Make each room unique, or pick a cohesive theme that best express
-            your interests and what inspires you. Find the furniture pieces you
-            need, from traditional to contemporary styles or anything in
-            between. Product specialists are available to help you create your
-            dream space.
-          </p>
-        </div>
-
-        <div><img src="./images/image-about-light.jpg" alt="" /></div>
-      </div>
-    </div>
     <div style="display: none">
       <div class="content-one">
         <p class="one replaceable-paragraph">
