initial mobile design

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       <div class="upper">
         <div class="big">
           <nav>
+            <img src="./images/icon-hamburger.svg" alt="" class="icon">
             <div class="currentTitle">Room</div>
             <ul>
               <li><a href="#">Home</a></li>
@@ -88,7 +89,7 @@
 
       <div class="lower">
         <div class="grid-container-3">
-          <div><img src="./images/image-about-dark.jpg" alt="" /></div>
+          <div class="dark-about"></div>
           <div class="content">
             <p class="one replaceable-paragraph">
               <span class="heading">About our furniture</span>Our
@@ -101,7 +102,7 @@
             </p>
           </div>
 
-          <div><img src="./images/image-about-light.jpg" alt="" /></div>
+          <div class="light-about"></div>
         </div>
       </div>
     </div>
