small changes in mobile view

--- a/index.html
+++ b/index.html
@@ -40,13 +40,18 @@
       <div class="upper">
         <div class="big">
           <nav>
-            <img src="./images/icon-hamburger.svg" alt="" class="icon">
+            <img src="./images/icon-hamburger.svg" alt="" class="icon" />
             <div class="currentTitle">Room</div>
             <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">Shop</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Contact</a></li>
+              <div>
+                <img src="./images/icon-close.svg" class="close-icon" alt="" />
+              </div>
+              <div>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Shop</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+              </div>
             </ul>
           </nav>
         </div>
