half made animation xd

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <nav>
             <img src="./images/icon-hamburger.svg" alt="" class="icon" />
             <div class="currentTitle">Room</div>
-            <ul>
+            <ul class="ul">
               <div>
                 <img src="./images/icon-close.svg" class="close-icon" alt="" />
               </div>
